# RL-based_Congestion_Window_Control_in_Simulated_Wireless_Networks

./: .gitignore  NOTES.md  README.md  agent.py  client.py  compare.py  ddpg_agent.pth  dqn_agent.pth  env_server.py  env_wrapper.py  main.py  pyproject.toml  requirements.txt  tcp_env.py  train.py  train_ddpg.py  train_dqn.py
environment/: __init__.py  agent_sender.py  cublic_sender.py  env.py  env_wrapper.py  packet.py  receiver.py  reno_sender.py  router.py  sender.py  tcp.py
logs/: 20260526_203123_CUBIC.txt  20260526_203123_DDPG.txt  20260526_203123_DQN.txt  20260526_203123_RENO.txt  20260526_211948_CUBIC.txt  20260526_211948_DDPG.txt  20260526_211948_DQN.txt  20260526_211948_RENO.txt  20260526_212446_CUBIC.txt  20260526_212446_DDPG.txt  20260526_212446_DQN.txt  20260526_212446_RENO.txt  20260526_212539_CUBIC.txt  20260526_212539_DDPG.txt  20260526_212539_DQN.txt  20260526_212539_RENO.txt  20260527_124006_CUBIC.txt  20260527_124006_DDPG.txt  20260527_124006_DQN.txt  20260527_124006_RENO.txt  20260528_203333_CUBIC.txt  20260528_203333_DDPG.txt  20260528_203333_DQN.txt  20260528_203333_RENO.txt  20260529_162351_CUBIC.txt  20260529_162351_DDPG.txt  20260529_162351_DQN.txt  20260529_162351_RENO.txt  20260529_162614_CUBIC.txt  20260529_162614_DDPG.txt  20260529_162614_DDPG_NO_AOI.txt  20260529_162614_DQN.txt  20260529_162614_DQN_NO_AOI.txt  20260529_162614_RENO.txt  20260529_162926_CUBIC.txt  20260529_162926_DDPG.txt  20260529_162926_DDPG_NO_AOI.txt  20260529_162926_DQN.txt  20260529_162926_DQN_NO_AOI.txt  20260529_162926_RENO.txt  (+18 more)
model/: ddpg_agent.pth  ddpg_no_aoi.pth  (+2 more)
(+6 files in other folders)
