[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[project]
name = "rl-based-congestion-window-control-in-simulated-wireless-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.12",
    "uvicorn>=0.47.0",
]
